empcd (2012.11.23) stable; urgency=low
  * Fixup function naming confusion (https://github.com/massar/empcd/issues/2)
  * Update mail addresses
  * Bump version number

 -- Jeroen Massar <jeroen@massar.ch>  Fri, 23 Nov 2012 16:38:42 +0100

empcd (2012.11.22) stable; urgency=low

  * Move code repo to Github: https://github.com/massar/empcd/
  * Allow entering of numeric events, eg with: key 165 UP mpd_next
  * Minor formatting fixups
  * Add 'giveup' and 'dontgiveup' option for retry on device open
  * Fixup options ordering (hinted by following github commit:
    https://github.com/Jille/empcd/commit/84a5b76f3fdeda5169d3654c6d9c35978124cada)

  Lee Dolsen (https://github.com/ldolse/empcd/)
  * Updated keytable to reflect IR & Multimedia additions to the kernel

 -- Jeroen Massar <jeroen@massar.ch>  Thu, 22 Nov 2012 15:07:42 +0100

empcd (2008.02.16) stable; urgency=low

  * Code cleanup, removal of compiler warnings.
  * Volume & Playlist support.
  * Pausing fix.
  * Multiple actions per event.
  * libmpdclient from mpc 0.12.2.
  * Debian initscript fixup.
  * Updated help with actions and arguments.

 -- Jeroen Massar <jeroen@unfix.org>  Sat, 16 Feb 2008 22:10:42 +0100

empcd (2005.12.12) unstable; urgency=low

  * Fixed init scripts
  * Added "exclusive access" mode Frederic Pasteleurs.
    This defaults to on now.

 -- Jeroen Massar <jeroen@unfix.org>  Mon, 12 Dec 2005 23:32:42 +0100

empcd (2005.11.28) unstable; urgency=low

  * Initial Release

 -- Jeroen Massar <jeroen@unfix.org>  Sun, 28 Nov 2005 23:59:42 +0100
